...
        return UUID()
    }
    
    public var name: String {
       switch self {
       case .male:
            return "Male"
       case .female:
            return "Female"
       case .clear:
            return ""
        }
   }
}

...
        return UUID()
    }
    
    public var name: String {
       switch self {
       case .uk:
            return "UK"
       case .us:
            return "US"
       case .aus:
            return "AUS"
       case .clear:
            return ""
        }
   }
}

...
    public func setUp() {
        
        documentView.layer.borderWidth = 2
        documentView.layer.cornerRadius = 20
        documentView.layer.borderColor = UIColor.black.cgColor
        
        importBtn.setTitle("Upload File", for: .normal)
        
        clearBtn.setImage(UIImage(systemName: "multiply.circle.fill", withConfiguration: iconConfiguration), for: .normal)
        
        genderAudioBtn.setImage(UIImage(systemName: "mic.fill", withConfiguration: audioIconConfiguration), for: .normal)
        genderAudioBtn.tintColor = .white
        
        accentAudioBtn.setImage(UIImage(systemName: "mic.fill", withConfiguration: audioIconConfiguration), for: .normal)
        accentAudioBtn.tintColor = .white
        
        selectedFileView.isHidden = true
        clearBtn.isHidden = true
        
        generateAudioBtn.setTitle("Generate Audio", for: .normal)
        
    }
    
    /// Controls setup of the segmented control values
    public func addValuesToSegmentControls() {
        
...
        
        voiceSelectedGenderLbl.text = nil
        voiceSelectedAccentLbl.text = nil
        
        TextToSpeechService.audioPlayer.resetAudioData()
        
        playPauseAudioBtn.setImage(UIImage(systemName: "play", withConfiguration: iconConfiguration), for: .normal)
        
        print("Cleared selected file, select another!")
        
    }
    
    @IBAction func generateAudio(_ sender: Any) {
...
