...
                                                <connections>
                                                    <action selector="playPauseAudio:" destination="S2z-Qn-eFc" eventType="touchUpInside" id="auK-xU-uH1"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Jq-44-RYI">
                                                <rect key="frame" x="178" y="0.0" width="147" height="42"/>
                                                <state key="normal" image="arrow.clockwise" catalog="system">
                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="30" scale="large" weight="regular"/>
                                                </state>
                                                <connections>
                                                    <action selector="replayAudio:" destination="S2z-Qn-eFc" eventType="touchUpInside" id="xz9-NR-k7C"/>
                                                </connections>
                                            </button>
...
